--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,30 +3,23 @@
 
 version: "3"
 services:
-  mongodb:
-    image: mongo:latest
-    container_name: mongodb
+
+  mongo:
+    image: mongo
+    restart: always
     ports:
       - 27017:27017
-    environment:
-      - MONGO_DATA_DIR=/data/db
-      - MONGO_LOG_DIR=/tmp/mongo/mongo.log
-    volumes:
-      - ./mongo/data:/data/db
-      - ./mongo/log:/tmp/mongo
-    command: mongod --logpath=/dev/null # --quiet
+    env_file: .mongo.env
+
   airnotifier:
+    image: airnotifier
     links:
-      - mongodb
+      - mongo
     depends_on:
-      - mongodb
-    build: .
-    container_name: airnotifier
+      - mongo
     volumes:
       - ./certs:/var/airnotifier/pemdir
       - ./logs:/var/log/airnotifier
     ports:
       - 8801:8801
-    environment:
-      - MONGO_SERVER=mongodb
-      - MONGO_PORT=27017
+    env_file: .env
